tests/ui/test_unknown_visibility.stderr
error: expected literal
 --> $DIR/test_unknown_visibility.rs:4:13
  |
4 | #[shorthand(visibility(garbage))]
  |             ^^^^^^^^^^^^^^^^^^^
